# blackbox

./: README.md
blackbox-lua/: .gitignore  README.md  test.lua
blackbox-lua/src/: BlackBox.cpp  BlackBox.hpp  CMakeLists.txt  LuaLibrary.cpp  LuaLibrary.hpp  LuaManager.cpp  LuaManager.hpp  main.cpp
blackbox-lua/src/lua-5.2.3/: CMakeLists.txt  lbaselib.c  llimits.h
c-plus-plus-from-jack-padkontrol-project/: blackbox.cpp  blackbox.h  grainengine.cpp  grainengine.h  soundengine.cpp  soundengine.h
c-sharp-from-unity-project/: soundengine.cs
js-from-ericfairbanks-org/: blackbox.js
